Fixed issue with top 'section' sizing too small when viewed in landscape

--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,12 @@ i {
     color: #fff;
 }
 
+@media only screen and (max-width: 765px){
+    #hero {
+	    min-height: 520px;
+    }
+}
+
 
 
 
